--- a/public/index.html
+++ b/public/index.html
@@ -15,3 +15,10 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+  html{
+    background-color: #23272a;
+
+  }
+</style>
