--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <title><%= htmlWebpackPlugin.options.title %></title>-->
+     <title>PicScape</title>
   </head>
   <body>
     <noscript>
@@ -15,3 +16,51 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+  html {
+    background-color: #23272a;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    overflow-y: auto;
+  }
+
+  /* WebKit (Chrome, Safari) */
+  body::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  body::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  body::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 4px;
+  }
+
+  body::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
+  /* Firefox */
+  @-moz-document url-prefix() {
+    body {
+      scrollbar-width: thin;
+    }
+
+    body {
+      scrollbar-color: #888 transparent;
+    }
+
+    body:hover {
+      scrollbar-color: #555 transparent;
+    }
+  }
+</style>
+
+
