--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
 
 <style>
   html {
-    padding-left: calc(100vw - 100%);
+    width: 100vw;
+    overflow-x: hidden;
     background-color: var(--background-color);
   }
 
@@ -27,7 +28,6 @@
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    overflow-y: auto;
   }
 
   /* WebKit (Chrome, Safari) */
